fix overflow issues

--- a/src/styles/components/TarotCard.module.scss
+++ b/src/styles/components/TarotCard.module.scss
@@ -5,6 +5,7 @@
   width: 50%;
   height: 100%;
   align-items: center;
+  overflow: hidden;
 
   &__back {
     @apply justify-center;
